--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:400,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200,400&display=swap");
 
 :root {
-  --border-color: #3570e6;
-  --fill-color: #6ab3f8;
+  --primary: #22254b;
+  --secondary: #373b69;
 }
 
 * {
@@ -10,96 +10,99 @@
 }
 
 body {
-  background-color: #88c0ee;
-  color: #fff;
-  font-family: "Montserrat", sans-serif;
+  background-color: var(--primary);
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+}
+
+header {
+  padding: 1rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 40px;
+  justify-content: flex-end;
+  background-color: var(--secondary);
 }
 
-h1 {
-  margin: 10px 0 0;
-}
-
-h3 {
-  font-weight: 400;
-  margin: 10px 0;
-}
-
-.cup {
-  background-color: #fff;
-  border: 4px solid var(--border-color);
-  color: var(--border-color);
-  border-radius: 0 0 40px 40px;
-  height: 330px;
-  width: 150px;
-  margin: 30px 0;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-}
-
-.cup.cup-small {
-  width: 50px;
-  height: 95px;
-  border-radius: 0 0 15px 15px;
-  background-color: rgba(255, 255, 255, 0.9);
-  cursor: pointer;
-  font-size: 14px;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin: 5px;
-  transition: 0.3s ease;
-}
-
-.cup.cup-small.full {
-  background-color: var(--fill-color);
+.search {
+  background-color: transparent;
+  border: 2px solid var(--primary);
+  border-radius: 50px;
+  font-family: inherit;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
   color: #fff;
 }
 
-.cups {
+.search::placeholder {
+  color: #7378c5;
+}
+
+.search:focus {
+  outline: none;
+  background-color: var(--primary);
+}
+
+main {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  width: 280px;
 }
 
-.remained {
+.movie {
+  width: 300px;
+  margin: 1rem;
+  background-color: var(--secondary);
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+  position: relative;
+  overflow: hidden;
+  border-radius: 3px;
+}
+
+.movie img {
+  width: 100%;
+}
+
+.movie-info {
+  color: #eee;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  flex: 1;
-  transition: 0.3 ease;
+  justify-content: space-between;
+  padding: 0.5rem 1rem 1rem;
+  letter-spacing: 0.5px;
 }
 
-.remained span {
-  font-size: 20px;
+.movie-info h3 {
+  margin-top: 0;
+}
+
+.movie-info span {
+  background-color: var(--primary);
+  padding: 0.25rem 0.5rem;
+  border-radius: 3px;
   font-weight: bold;
 }
 
-.remained small {
-  font-size: 20px;
+.movie-info span.green {
+  color: lightgreen;
 }
 
-.percentage {
-  background-color: var(--fill-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: bold;
-  font-size: 30px;
-  height: 0;
-  transition: 0.3s ease;
+.movie-info span.orange {
+  color: orange;
 }
 
-.text {
-  text-align: center;
-  margin: 20px 0;
+.movie-info span.red {
+  color: red;
+}
+
+.overview {
+  background-color: #fff;
+  padding: 2rem;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  max-height: 100%;
+  transform: translateY(101%);
+  transition: transform 0.3s ease;
+}
+
+.movie:hover .overview {
+  transform: translateY(0);
 }
