--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ main {
   padding: 0.25rem 0.5rem;
   border-radius: 3px;
   font-weight: bold;
+  height: fit-content;
 }
 
 .movie-info span.green {
